--- a/cosmocloud-deploy/templates/backend-deployment.yaml
+++ b/cosmocloud-deploy/templates/backend-deployment.yaml
@@ -21,4 +21,7 @@ spec:
         - containerPort: 8000
         env:
         - name: REDIS_URI
-          value: redis://redis-svc:6379
+          valueFrom:
+            configMapKeyRef:
+              name: app-config
+              key: REDIS_URI
